  TEZ-1313. Setup pre-commit build to test submitted patches.
  TEZ-1856. Remove LocalOnFileSortedOutput, LocalMergedInput, LocalTaskOutputFiles.
  TEZ-1949. Whitelist TEZ_RUNTIME_OPTIMIZE_SHARED_FETCH for broadcast edges.
  TEZ-1593. Refactor PipelinedSorter to remove all MMAP based ByteBuffer references.

Release 0.6.1: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:
  TEZ-2102. Tez UI: DAG view has hidden edges, dragging DAG by holding vertex causes unintended click.
  TEZ-2101. Tez UI: Issues on displaying a table.
  TEZ-2092. Tez UI history url handler injects spurious trailing slash.
  TEZ-2098. Tez UI: Dag details should be the default page for dag, fix invalid time entries for failed Vertices.
  TEZ-2024. TaskFinishedEvent may not be logged in recovery.
  TEZ-2031. Tez UI: horizontal scrollbars do not appear in tables, causing them to look truncated. 
  TEZ-2073. SimpleHistoryLoggingService cannot be read by log aggregation (umask)
  TEZ-2078. Tez UI: Task logs url use in-progress url causing various errors.
  TEZ-2077. Tez UI: No diagnostics on Task Attempt Details page if task attempt failed. 
  TEZ-2065. Setting up tez.tez-ui.history-url.base with a trailing slash can result in failures to redirect correctly. 
  TEZ-2068. Tez UI: Dag view should use full window height, disable webuiservice in localmode.
  TEZ-2079. Tez UI: trailing slash in timelineBaseUrl in ui should be handled. 
  TEZ-2069. Tez UI: appId should link to application in dag details view.
  TEZ-2063. Tez UI: Flaky log url in tasks table.
  TEZ-2062. Tez UI: Showing 50 elements not working properly.
  TEZ-2056. Tez UI: fix VertexID filter,show only tez configs by default,fix appattemptid.
  TEZ-2052. Tez UI: log view fixes, show version from build, better handling of ats url config.
  TEZ-2043. Tez UI: add progress info from am webservice to dag and vertex views.
  TEZ-2032. Update CHANGES.txt to show 0.6.0 is released
  TEZ-2018. App Tracking and History URL should point to the Tez UI.