@@ -34,3 +34,4 @@
 @success-color: limegreen;
 @error-color: crimson;
 @warning-color: orange;
+@unknown-color: crimson;
